--- a/index.css
+++ b/index.css
@@ -2,11 +2,18 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.ui {
-  margin: 5% 20%;
-  /* border: 1px solid black; */
-  height: 480px;
+* {
+  box-sizing: border-box;
 }
+.ui {
+  margin: 0;
+  padding: 0;
+}
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
 .ui-new-list {
   margin: 5% 20%;
   /* border: 1px solid black; */
@@ -84,13 +91,15 @@ body {
   text-align: center;
 }
 .cards {
-  margin-top: 30px;
   border: 1px solid #f52e27;
-  height: 330px;
-  width: 220px;
+  width: 100%;
   border-radius: 10px;
-  /* display: inline-block; */
   box-shadow: 10px 10px 10px #d6d0d0;
+  display: inline-block;
+  padding: 20px 25px;
+  font-size: 20px;
+  font-weight: 500;
+  margin: 0 0 25px;
 }
 .card1 {
   margin-left: 20px;
@@ -258,249 +267,47 @@ body {
   top: 270px;
   left: 480px;
 }
-@media screen and (min-width: 480px) and (max-width: 1000px) {
-  .ui {
-    margin: 0px;
-    width: auto;
-    /* border: 1px solid black; */
-  }
-  .head-container {
-    /* border: 1px solid black; */
-    width: auto;
-    padding-right: 10px;
-    padding-bottom: 100px;
-  }
-  .left-title {
-    /* border: 1px solid black; */
 
-    margin-left: 10px;
-    /* display: block; */
-  }
-  .right-title {
-    /* border: 1px solid black; */
-    width: auto;
-    padding-right: 10px;
-    height: 40px;
-    margin-right: 0px;
-  }
-  .add-logo {
-    left: 100px;
-  }
-  .task-body {
-    visibility: hidden;
-  }
-  form {
-    visibility: hidden;
-  }
-  .line {
-    visibility: hidden;
-  }
-  .cards-container {
-    position: relative;
-    left: 0px;
-    padding: 20px;
-    flex-direction: column;
-    /* border: 1px solid black; */
-    width: auto;
-    height: auto;
-  }
-  .cards {
-    text-align: left;
-    height: 40px;
-    width: auto;
-    border-color: gainsboro;
-    margin: 20px 0px;
-    padding: 20px;
-  }
-  .task-title {
-    margin: 0px;
-    color: black;
-    margin-bottom: 20px;
-  }
-  .line-trip {
-    visibility: initial;
-    width: 240px;
-    margin-right: 0px;
-    padding-right: 0px;
-  }
-  .task-body-trip {
-    visibility: initial;
-  }
-  .check-trip {
-    visibility: initial;
-  }
-  .container-card-trip {
-    margin: 0px;
-    position: relative;
-    top: 100px;
-    transform: scale(1.4, 1.4);
-  }
-  .card-trip {
-    margin: 0px;
-    border: 1px solid #f52e27;
-    height: 400px;
-    width: 250px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px #d6d0d0;
-  }
-  .task-title-trip {
-    position: initial;
-    padding-top: 30px;
-    padding-right: 40px;
-    text-align: center;
-    color: #f52e27;
-  }
-  .task-body-trip {
-    position: initial;
-  }
-  .add-logo-trip {
-    position: relative;
-    left: 100px;
-  }
-  .form-new-list {
-    visibility: initial;
-  }
-  .ui-new-list {
-    margin: 0px;
-  }
-  .new-list {
-    transform: scale(1.4, 1.4);
-    position: absolute;
-    top: 350px;
-    left: 220px;
-    width: 300px;
-  }
-  .form-new-trip {
-    visibility: initial;
-  }
+.card_list {
+  list-style: none;
+  padding: 0;
 }
-@media screen and (min-width: 300px) and (max-width: 480px) {
-  .ui {
-    margin: 0px;
-    width: 320px;
-    /* border: 1px solid black; */
-  }
-  .head-container {
-    /* border: 1px solid black; */
-    width: 350px;
-    padding-right: 10px;
+
+.card_list a {
+  color: #000;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .card_list {
+    padding: 0 25px;
   }
   .left-title {
-    /* border: 1px solid black; */
-
-    margin-left: 10px;
-    /* display: block; */
-  }
-  .right-title {
-    /* border: 1px solid black; */
-    width: 40px;
-    height: 40px;
-    margin-right: 0px;
+    font-size: 40px;
   }
   .add-text {
-    visibility: hidden;
+    display: none;
   }
-  .task-body {
-    visibility: hidden;
+
+  .right-title {
+    margin-top: 13px;
+    margin-right: 30px;
   }
-  form {
-    visibility: hidden;
+
+  .circle {
+    width: 35px;
+    height: 35px;
   }
-  .line {
-    visibility: hidden;
+
+  .ver {
+    height: 17px;
+    left: 17px;
+    bottom: 26px;
   }
-  .cards-container {
-    position: relative;
-    left: 0px;
-    flex-direction: column;
-    /* border: 1px solid black; */
-    width: 355px;
-    height: 560px;
-  }
-  .cards {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-    height: 40px;
-    width: 290px;
-    border-color: gainsboro;
-    padding: 20px;
-  }
-  .task-title {
-    margin: 0px;
-    color: black;
-    margin-bottom: 20px;
-  }
-  .title-trip-space {
-    visibility: hidden;
-  }
-  .title-trip {
-    /* border: 1px solid black; */
-    width: 525px;
-    position: relative;
-    left: -130px;
-    font-size: 50px;
-  }
-  .back {
-    position: absolute;
-    left: 18px;
-    top: 60px;
-  }
-  .back-text {
-    visibility: hidden;
-  }
-  .line-trip {
-    visibility: initial;
-    width: 240px;
-    margin-right: 0px;
-    padding-right: 0px;
-  }
-  .task-body-trip {
-    visibility: initial;
-  }
-  .check-trip {
-    visibility: initial;
-  }
-  .container-card-trip {
-    margin: 0px;
-    position: relative;
-    top: -100px;
-  }
-  .card-trip {
-    margin: 0px;
-    border: 1px solid #f52e27;
-    height: 400px;
-    width: 250px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px #d6d0d0;
-  }
-  .task-title-trip {
-    position: initial;
-    padding-top: 30px;
-    padding-right: 40px;
-    text-align: center;
-    color: #f52e27;
-  }
-  .task-body-trip {
-    position: initial;
-  }
-  .add-logo-trip {
-    position: relative;
-    left: 100px;
-  }
-  .form-new-list {
-    visibility: initial;
-  }
-  .ui-new-list {
-    margin: 0px;
-  }
-  .new-list {
-    position: absolute;
-    top: 300px;
-    left: 20px;
-    width: 300px;
-  }
-  .form-new-trip {
-    visibility: initial;
+
+  .hor {
+    width: 17px;
+    left: 10px;
+    bottom: 35px;
   }
 }
